--- a/14_SpringBootWebDevelopment/ToDoList/pom.xml
+++ b/14_SpringBootWebDevelopment/ToDoList/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.4.5</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
     </dependencies>
 </project>
