--- a/14_SpringBootWebDevelopment/ToDoList/application.properties
+++ b/14_SpringBootWebDevelopment/ToDoList/application.properties
@@ -1,1 +1,6 @@
-server.port=8181
+server.port=9191
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/todolist
+spring.datasource.username=root
+spring.datasource.password=789654123
